# intakeAssignment

./: .gitignore  README.md
cmake/: CMakeLists.txt
csframework/assets/: .availableImages  level1.map
csframework/assets/maps/: level1.map  level2.map
csframework/engine/: camera.cpp  camera.h  collisionhandler.cpp  collisionhandler.h  color.cpp  color.h  config.h  entity.cpp  entity.h  hudelement.cpp  hudelement.h  hudtext.cpp  hudtext.h  input.cpp  input.h  k.bat  mesh.cpp  mesh.h  physicsbody.cpp  physicsbody.h  renderer.cpp  renderer.h  resourceloader.cpp  resourceloader.h  resourcemanager.cpp  resourcemanager.h  scene.cpp  scene.h  scenemanager.cpp  scenemanager.h  shader.cpp  shader.h  sound.cpp  sound.h  sprite.cpp  sprite.h  spritesheet.cpp  spritesheet.h  textmesh.cpp  textmesh.h  (+4 more)
csframework/project/: ammoclip.cpp  ammoclip.h  audioparticle.cpp  audioparticle.h  background.cpp  background.h  baselevel.cpp  baselevel.h  bloodsplatter.cpp  bloodsplatter.h  bullet.cpp  bullet.h  crate.cpp  crate.h  cratepart.cpp  cratepart.h  explosionparticle.cpp  explosionparticle.h  explosivebarrel.cpp  explosivebarrel.h  ground.cpp  ground.h  level1.cpp  level1.h  level2.cpp  level2.h  main.cpp  mainscene.cpp  mainscene.h  mapeditor.cpp  mapeditor.h  mapeditorhelp.cpp  mapeditorhelp.h  menuscene.cpp  menuscene.h  npcchatbar.cpp  npcchatbar.h  player.cpp  player.h  playergroundtrigger.cpp  (+15 more)
csframework/shaders/: sprite.frag  sprite.vert
documentation/: Doxyfile  README.txt  documentation.html
vs2015/: intakeAssignment.sln
vs2015/csframework/: csframework.sln
vs2015/csframework/csframework/: csframework.vcxproj  csframework.vcxproj.filters  csutils.h
vs2015/csframework/csframework/Debug/: csframework.idb
vs2015/csframework/csframework/Debug/csframework.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Lib-link.read.1.tlog  Lib-link.write.1.tlog  lib.command.1.tlog
vs2015/intakeAssignment/: intakeAssignment.vcxproj  intakeAssignment.vcxproj.filters
